<resources>
    <string name="app_name">Recipes App</string>
    <string name="title_activity_add_recipies">AddRecipies</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="image_url">Image URL</string>
    <string name="category">Category</string>
</resources>